--- a/src/app/home/blog-section/blog-section.component.html
+++ b/src/app/home/blog-section/blog-section.component.html
@@ -1,75 +1,75 @@
 <!-- Start of blog section -->
-
 <section class="blog-section" id="blog">
-    <div class="container-fluid">
-        <div class="latest-info">
-            <p 
-                class="info-title text-center font-weight-semibold font-48px text-primary"
-            >
-                Get to know the latest stuff via our blog post.
-            </p>
-            <div class="row info-content">
-                <div 
-                    class="col-12 col-sm-6 col-md-4"
-                >
-                    <div class="block-content d-flex justify-content-center">
-                        <p class="text-dark">
-                            25 AUG, 2021 | TECHNOLOGY
-                        </p>
-                        <h3 class="text-dark font-weight-semibold font-26px">
-                            Trading Cryptonite: Beginner's Guide
-                        </h3>
-                        <p class="text-dark">
-                            You are well on your way to the international financial arenas. 
-                            Let's get the market bulls and bears.
-                        </p>
-                        <br>
-                        <div>
-                            <a href="#" class="text-primary font-13px">Read more</a>
-                        </div>
-                    </div>
-                </div>
-                <div 
-                    class="col-12 col-sm-6 col-md-4 d-flex justify-content-center"
-                >
-                    <div class="blockB-content">
-                        <p class="text-dark">
-                            25 AUG, 2021 | TECHNOLOGY
-                        </p>
-                        <h3 class="text-dark font-weight-semibold font-26px">
-                            A Robust option to trading:
-                        </h3>
-                        <p class="text-dark">
-                            View all pricing information now, to achieve a maturity period, 
-                            where you can customize your views and columns as well!.
-                        </p>
-                        <br>
-                        <div>
-                            <a href="#" class="text-primary font-13px">Read more</a>
-                        </div>
-                    </div>
-                </div>
-                <div 
-                    class="col-12 col-sm-6 col-md-4"
-                >
-                    <div class="block-content d-flex flex-column align-items-start">
-                        <p class="text-dark">
-                            25 AUG, 2021 | TECHNOLOGY
-                        </p>
-                        <h3 class="text-dark font-weight-semibold font-26px">
-                            The Future Of Cryptocurrency:
-                        </h3>
-                        <p class="text-dark">
-                            If recent headlines are any indication, then the future of 
-                            cryptocurrency is a very promising one.
-                        </p>
-                        <br>
-                        <div>
-                            <a href="#" class="text-primary font-13px">Read more</a>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
+  <div class="container pt-5">
+    <div class="row">
+      <div class="col-sm-12">
+        <h1
+          class="info-title text-center font-weight-semibold text-primary mb-5"
+        >
+          Get to know the latest stuff via our blog post.
+        </h1>
+      </div>
     </div>
+    <div class="row justify-content-center">
+      <div class="col-12 col-sm-6 col-md-4 d-flex align-items-center">
+        <div class="mx-5 mx-md-2 mx-lg-5 my-3">
+          <mat-card [class.mat-elevation-z4]="true" class="">
+            <p class="text-dark">25 AUG, 2021 | TECHNOLOGY</p>
+            <h3 class="text-dark font-weight-semibold font-26px">
+              Trading Cryptonite: Beginner's Guide
+            </h3>
+            <p class="text-dark">
+              You are well on your way to the international financial arenas.
+              Let's get the market bulls and bears.
+            </p>
+            <div>
+              <a href="#" class="text-primary font-13px">Read more</a>
+            </div>
+          </mat-card>
+        </div>
+      </div>
+      <div class="col-12 col-sm-6 col-md-4">
+        <div class="d-flex align-items-center justify-content-center">
+          <div class="mx-3 mx-md-0 mx-lg-3">
+            <mat-card
+              [class.mat-elevation-z4]="true"
+              style="z-index: 2"
+              class="px-4 py-4 py-md-5 border-color position-relative"
+            >
+              <p class="text-dark">25 AUG, 2021 | TECHNOLOGY</p>
+              <h3 class="text-dark font-weight-semibold font-26px">
+                A Robust option to trading:
+              </h3>
+              <p class="text-dark mb-5 mb-md-2 mb-lg-5">
+                View all pricing information now, to achieve a maturity period,
+                where you can customize your views and columns as well!.
+              </p>
+              <div>
+                <a href="#" class="text-primary font-13px">Read more</a>
+              </div>
+            </mat-card>
+          </div>
+        </div>
+      </div>
+      <div
+        class="col-12 col-sm-6 col-md-4 d-flex align-items-center justify-content-center"
+      >
+        <div class="mx-5 mx-md-2 mx-lg-5 my-3">
+          <mat-card [class.mat-elevation-z4]="true">
+            <p class="text-dark">25 AUG, 2021 | TECHNOLOGY</p>
+            <h3 class="text-dark font-weight-semibold font-26px">
+              The Future Of Cryptocurrency:
+            </h3>
+            <p class="text-dark">
+              If recent headlines are any indication, then the future of
+              cryptocurrency is a very promising one.
+            </p>
+            <div>
+              <a href="#" class="text-primary font-13px">Read more</a>
+            </div>
+          </mat-card>
+        </div>
+      </div>
+    </div>
+  </div>
 </section>
