--- a/src/app/home/download-section/download-section.component.html
+++ b/src/app/home/download-section/download-section.component.html
@@ -1,74 +1,77 @@
 <!-- Start of download app section -->
 
 <section class="download-section bg-primary position-relative">
-    <div class="download-wave">
-        <img 
-            src="assets/images/homepage/download/download-wave.png" 
-            alt="Download Wave"
-            class="w-100"
-        >
-    </div>
-    <div class="container mt-5">
-        <div class="row d-flex align-items-center justify-content-center">
-            <div class="col-12 col-sm-6 col-xl-5">
-                <div class="mx-3">
-                    <img 
-                        src="assets/images/homepage/download/phones.png" 
-                        alt="Mobile Phones"
-                        class="d-none d-sm-block mx-auto w-100"
-                        style="z-index: 3; position: relative;"
-                    >
-                    <img 
-                        src="assets/images/homepage/download/phones.png" 
-                        alt="Mobile Phones"
-                        class="d-block d-sm-none w-100"
-                    >
-                </div>
-            </div>
-            <div class="col-12 col-sm-6 col-xl-5">
-                <div class="d-flex flex-column align-items-start justify-content-center pb-3 px-3 px-md-5 pt-5 pt-sm-0">
-                    <p class="text-white">
-                        <span class="font-weight-semibold font-48px"> 
-                            Download our CRYPTONITE app
-                        </span>
-                    </p>
-                    <p class="text-white font-weight-medium font-26px">
-                        Download a mobile app or trade directly from your web browser. 
-                        Never miss a chance
-                    </p>
-                    <div class="row d-flex justify-content-center pb-5">
-                        <div class="col-6 col-sm-6">
-                            <div>
-                                <a href="https://www.apple.com" target="_blank">
-                                    <img 
-                                        src="assets/images/homepage/download/app-store.png" 
-                                        alt="App Store"
-                                        class="w-100"
-                                    >
-                                </a>
-                            </div>
-                        </div>
-                        <div class="col-6 col-sm-6 d-flex align-items-center">
-                            <div>
-                                <a href="https://play.google.com" target="_blank">
-                                    <img 
-                                        src="assets/images/homepage/download/google-play.png"
-                                        alt="Google Play"
-                                        class="w-100"
-                                    >
-                                </a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div> 
+  <div class="download-wave">
+    <img
+      src="assets/images/homepage/download/download-wave.png"
+      alt="Download Wave"
+      class="w-100"
+    />
+  </div>
+  <div class="container mt-5">
+    <div class="row d-flex align-items-center justify-content-center">
+      <div class="col-12 col-sm-6 col-xl-5">
+        <div class="mx-3">
+          <img
+            src="assets/images/homepage/download/phones.png"
+            alt="Mobile Phones"
+            class="d-none d-sm-block mx-auto w-100"
+            style="z-index: 3; position: relative"
+          />
+          <img
+            src="assets/images/homepage/download/phones.png"
+            alt="Mobile Phones"
+            class="d-block d-sm-none w-100"
+          />
         </div>
-    </div>
-    <div class="download-wave-bottom d-none d-sm-block" style="height: 9rem; margin-top: -150px;">
-        <img 
-            src="assets/images/homepage/download/download-wave-bottom.png" 
-            alt="Download Wave"
-            class="w-100" style="bottom: 0; position: absolute;"
+      </div>
+      <div class="col-12 col-sm-6 col-xl-5">
+        <div
+          class="d-flex flex-column align-items-start justify-content-center pb-3 px-3 px-md-5 pt-5 pt-sm-0"
         >
+          <p class="text-white">
+            <span class="font-weight-semibold font-48px">
+              Download our CRYPTONITE app
+            </span>
+          </p>
+          <p class="text-white font-weight-medium font-26px">
+            Download a mobile app or trade directly from your web browser. Never
+            miss a chance
+          </p>
+          <div class="row d-flex justify-content-center pb-5">
+            <div class="col-6 col-sm-6">
+              <div>
+                <a href="https://www.apple.com" target="_blank">
+                  <img
+                    src="assets/images/homepage/download/app-store.png"
+                    alt="App Store"
+                    class="w-100"
+                  />
+                </a>
+              </div>
+            </div>
+            <div class="col-6 col-sm-6 d-flex align-items-center">
+              <div>
+                <a href="https://play.google.com" target="_blank">
+                  <img
+                    src="assets/images/homepage/download/google-play.png"
+                    alt="Google Play"
+                    class="w-100"
+                  />
+                </a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
+  </div>
+  <div class="download-wave-bottom" style="height: 9rem; margin-top: -150px">
+    <img
+      src="assets/images/homepage/download/download-wave-bottom.png"
+      alt="Download Wave"
+      class="w-100"
+      style="bottom: 0; position: absolute"
+    />
+  </div>
 </section>
