--- a/src/app/home/empower-section/empower-section.component.html
+++ b/src/app/home/empower-section/empower-section.component.html
@@ -1,45 +1,41 @@
 <!-- Empower section begins here -->
-<section class="empower-section bg-primary">
+<section class="empower-section bg-primary" style="margin-top: 8rem;">
     <div class="container">
-        <div class="empower-cover">
-            <div class="row">
-                <div class="col-12 col-sm-10 col-md-6">
-                    <h1 class="text-secondary font-weight-semibold">
-                        Empowered
-                    </h1>
-                    <h1 class="text-secondary font-weight-semibold">
-                        digital currency
-                    </h1>
-                    <br>
-                    <p class="text-secondary font-26px">
-                        The utmost comfort and premium trading conditions - that’s
-                    </p>
-                    <p class="text-secondary font-26px">
-                        Cryptonite’s offer. Fight for your place
-                        under the sun with 24/7 access
-                    </p>
-                    <p class="text-secondary font-26px"> 
-                        to the market from any place, anytime. 
-                    </p>
-                    <div class="getstarted">
-                        <button 
-                            [routerLink]="['accounts/register']"
-                            type="submit" 
-                            id="button-anim" 
-                            class="btn d-flex align-items-center justify-content-center font-26px text-dark"
-                        >
-                            GET STARTED
-                        </button>
-                    </div>
-                </div>
-                <div class="col-12 col-sm-10 col-md-6">
-                    <lottie-player 
-                        src="https://assets7.lottiefiles.com/packages/lf20_ikaawl5v.json"
-                        background="transparent" 
-                        speed="1" loop autoplay
+        <div class="row d-flex justify-content-center">
+            <div class="col-12 col-md-6 px-3">
+                <h1 class="text-secondary font-weight-semibold lh-base mb-5" style="font-size: 90px;">
+                    Empowered digital currency
+                </h1>
+                <p class="text-secondary font-26px mb-5">
+                    The utmost comfort and premium trading conditions - that’s
+                    Cryptonite’s offer. Fight for your place
+                    under the sun with 24/7 access
+                    to the market from any place, anytime.
+                </p>
+                <p class="text-secondary font-26px">
+                    
+                </p>
+                <p class="text-secondary font-26px"> 
+                     
+                </p>
+                <div class="getstarted">
+                    <button 
+                        [routerLink]="['accounts/register']"
+                        type="submit" 
+                        id="button-anim" 
+                        class="btn d-flex align-items-center justify-content-center font-26px text-dark"
                     >
-                    </lottie-player>
+                        GET STARTED
+                    </button>
                 </div>
+            </div>
+            <div class="col-12 col-md-6 d-flex align-items-center justify-content-center">
+                <lottie-player 
+                    src="https://assets7.lottiefiles.com/packages/lf20_ikaawl5v.json"
+                    background="transparent" 
+                    speed="1" loop autoplay 
+                >
+                </lottie-player>
             </div>
         </div>
     </div>
@@ -47,7 +43,7 @@
         <img 
             src="assets/images/homepage/empower/empower-wave.png" 
             alt="Empower Wave"
-            width="100%"
+            class="w-100"
         >
     </div>
 </section> 
