--- a/src/app/home/empower-section/empower-section.component.scss
+++ b/src/app/home/empower-section/empower-section.component.scss
@@ -1,13 +1,13 @@
 @import "../../../theme/colors.scss";
  
-.empower-section {
-    .empower-cover {
-        padding: 50px 0px;
-    }
-    h1 {
-        font-size: 90px ;
-    }
-}
+// .empower-section {
+//     .empower-cover {
+//         padding: 50px 0px;
+//     }
+//     h1 {
+//         font-size: 90px ;
+//     }
+// }
 #button-anim {
     background-color: $accentColor;
     border-radius: 80px;
