--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,14 +1,14 @@
 
-<!-- <homepage-navbar></homepage-navbar> -->
+<homepage-navbar></homepage-navbar>
 <div class="homepage">
-    <!-- <empower-section></empower-section>
+    <empower-section></empower-section>
     <trusted-partners-section></trusted-partners-section>
     <services-section></services-section>
     <about-us-section></about-us-section>
     <coin-section></coin-section>
-    <blog-section></blog-section> -->
+    <blog-section></blog-section>
     <download-section></download-section>
-    <subscribe-section></subscribe-section>
-</div>
-<!-- <homepage-footer></homepage-footer> -->
+    <subscribe-section></subscribe-section>  
+</div>  
+<homepage-footer></homepage-footer>
 
