--- a/src/app/home/trusted-partners-section/trusted-partners-section.component.html
+++ b/src/app/home/trusted-partners-section/trusted-partners-section.component.html
@@ -1,42 +1,41 @@
 <!-- Start of Trusted Partners section -->
-<section class="trusted-partners">
-    <div class="container-fluid">
-        <h1 class="text-center text-primary">
-            Trusted Partners
-        </h1>
-        <div class="row">
-            <div class="col-12 col-sm-6 col-md-3 my-auto">
-                <img 
-                    class="img-fluid"
-                    src="assets/images/homepage/trusted-partners/bitcoin.png" 
-                    alt="Bitcoin"
-                    width="60%"
-                >
-            </div>
-            <div class="col-12 col-sm-6 col-md-3 my-auto">
-                <img 
-                    class="img-fluid"
-                    src="assets/images/homepage/trusted-partners/master-card.png" 
-                    alt="Master Card"
-                    width="50%"
-                >
-            </div>
-            <div class="col-12 col-sm-6 col-md-3 my-auto">
-                <img 
-                    class="img-fluid"
-                    src="assets/images/homepage/trusted-partners/visa.png" 
-                    alt="Visa"
-                    width="80%"
-                >
-            </div>
-            <div class="col-12 col-sm-6 col-md-3 my-auto">
-                <img 
-                    class="img-fluid"
-                    src="assets/images/homepage/trusted-partners/hsbc.png" 
-                    alt="HSBC"
-                    width="80%"
-                >
-            </div>
-        </div>
+<section
+  class="trusted-partners position-relative"
+  style="margin-top: -50px; margin-bottom: -50px; z-index: 2"
+>
+  <div class="container">
+    <h1 class="text-center text-primary font-weight-semibold">
+      Trusted Partners
+    </h1>
+    <div class="row">
+      <div class="col-6 col-sm-3 my-auto">
+        <img
+          src="assets/images/homepage/trusted-partners/bitcoin.png"
+          alt="Bitcoin"
+          class="w-75 mx-auto"
+        />
+      </div>
+      <div class="col-6 col-sm-3 my-auto">
+        <img
+          src="assets/images/homepage/trusted-partners/master-card.png"
+          alt="Master Card"
+          class="w-50 mx-auto"
+        />
+      </div>
+      <div class="col-6 col-sm-3 my-auto">
+        <img
+          src="assets/images/homepage/trusted-partners/visa.png"
+          alt="Visa"
+          class="w-50 mx-auto"
+        />
+      </div>
+      <div class="col-6 col-sm-3 my-auto">
+        <img
+          src="assets/images/homepage/trusted-partners/hsbc.png"
+          alt="HSBC"
+          class="w-75 mx-auto"
+        />
+      </div>
     </div>
+  </div>
 </section>
