--- a/src/app/home/about-us-section/about-us-section.component.html
+++ b/src/app/home/about-us-section/about-us-section.component.html
@@ -1,32 +1,32 @@
 <!-- Start of about us section -->
-<section class="aboutUs-section" id="aboutUs">
-    <div class="container px-5">
-        <div class="row">
-            <div class="col-12 col-md-6">
-                <div class="d-flex flex-column justify-content-center">
-                    <h1 class="text-primary font-weight-semibold font-48px">
-                        ABOUT US
-                    </h1>
-                    <h2 class="font-weight-semibold font-26px">
-                        We are trusted around the world.
-                    </h2>
-                    <p class="font-weight-medium font-20px">
-                        At CryptoNite, we know what it is like to trade.  
-                        With the scale of a global fintech and the agility of a start-up, 
-                        we’re here to arm you with everything you need to take on the 
-                        global markets with confidence. 
-                    </p>
-                </div>
-            </div>
-            <div class="col-12 col-md-6">
-                <div class="d-flex flex-column justify-content-center">
-                    <lottie-player 
-                        src="https://assets3.lottiefiles.com/private_files/lf30_hknognhr.json"  
-                        background="transparent" 
-                        speed="1" loop autoplay
-                    ></lottie-player>
-                </div>
-            </div>
+<section class="aboutUs-section">
+  <div class="container">
+    <div class="row d-flex align-items-center justify-content-center">
+      <div class="col-12 col-sm-6 col-xl-5">
+        <div class="mx-3">
+          <h1 class="text-primary font-weight-semibold mb-4">ABOUT US</h1>
+          <h2 class="font-weight-semibold mb-3">
+            We are trusted around the world.
+          </h2>
+          <p class="font-weight-medium font-20px">
+            At CryptoNite, we know what it is like to trade. With the scale of a
+            global fintech and the agility of a start-up, we’re here to arm you
+            with everything you need to take on the global markets with
+            confidence.
+          </p>
         </div>
+      </div>
+      <div class="col-12 col-sm-6 col-xl-5">
+        <div class="d-flex flex-column justify-content-center">
+          <lottie-player
+            src="https://assets3.lottiefiles.com/private_files/lf30_hknognhr.json"
+            background="transparent"
+            speed="1"
+            loop
+            autoplay
+          ></lottie-player>
+        </div>
+      </div>
     </div>
+  </div>
 </section>
