--- a/src/app/home/coin-section/coin-section.component.html
+++ b/src/app/home/coin-section/coin-section.component.html
@@ -1,20 +1,19 @@
 <!-- Start of coin section -->
 <section class="coin-section">
-    <div class="container">
-        <div class="px-5">
-            <div class="row">
-                <div class="col-12 col-sm-10 col-md-6">
-                    <img 
-                        class="img-fluid coin-img pt-3" 
-                        src="assets/images/homepage/coin/coin.svg"
-                        alt="Cryptonite Coin" 
-                        width="90%"
-                    >
-                </div>
-                <div class="col-12 col-md-6">
-                    <h3 class="text-primary font-weight-semibold font-48px">
+    <div class="container pt-5">
+        <div class="row flex-column-reverse flex-sm-row align-items-center justify-content-center">
+            <div class="col-12 col-sm-6 col-xl-5">
+                <img  
+                    src="assets/images/homepage/coin/coin.svg"
+                    alt="Cryptonite Coin" 
+                    class="w-100 mx-auto"
+                >
+            </div>
+            <div class="col-12 col-sm-6 col-xl-5 d-flex flex-column align-items-center">
+                <div class="mx-3">
+                    <h1 class="text-primary font-weight-semibold mb-5">
                         Find The Confidence To Fight For Market Leadership
-                    </h3>
+                    </h1>
                     <p class="font-weight-medium font-20px">
                         Cryptonite is the platform that gives you everything - best
                         fitting trading conditions, customizable account, huge choice of
