--- a/src/app/home/navbar-section/navbar-section.component.html
+++ b/src/app/home/navbar-section/navbar-section.component.html
@@ -1,7 +1,7 @@
 <!-- Start of navbar section -->
 
 <nav 
-    class="navbar navbar-expand-lg navbar-light bg-light px-5 py-2 py-lg-4"
+    class="navbar navbar-expand-lg fixed-top navbar-light bg-light px-5 py-2 py-lg-4"
 >
     <a href="#" class="navbar-brand">
         <img 
