--- a/src/app/home/trusted-partners-section/trusted-partners-section.component.scss
+++ b/src/app/home/trusted-partners-section/trusted-partners-section.component.scss
@@ -1,10 +1,9 @@
 
-.trusted-partners {
-    margin-top: -50px;
-    width: 100%;
-    padding: 0px 50px;
-    h1 {
-        font-weight: bold;
-        font-size: 48px;
+
+@media screen and (max-width: 700px) {
+    .trusted-partners {
+        margin-bottom: -40px !important;
+        margin-top: -20px !important;
+
     }
 }
