--- a/src/app/home/empower-section/empower-section.component.html
+++ b/src/app/home/empower-section/empower-section.component.html
@@ -20,6 +20,7 @@
                 </p>
                 <div class="getstarted">
                     <button 
+                        mat-raised-button
                         [routerLink]="['accounts/register']"
                         type="submit" 
                         id="button-anim" 
