--- a/src/app/home/footer-section/footer-section.component.html
+++ b/src/app/home/footer-section/footer-section.component.html
@@ -1,8 +1,8 @@
 <!-- Start of footer section -->
-<div class="container-fluid cryptonite-footer bg-primary pt-5">
+<section class="bg-primary pt-5">
   <div class="container">
-    <div class="row">
-      <div class="col-12 col-sm-6 col-md-3">
+    <div class="row d-flex justify-content-center">
+      <div class="col-6 col-md-3">
         <div class="d-flex flex-column align-items-start">
           <img
             class="img-fluid"
@@ -83,7 +83,7 @@
           </ul>
         </div>
       </div>
-      <div class="col-12 col-sm-6 col-md-3">
+      <div class="col-6 col-md-3">
         <div class="d-flex flex-column align-items-start">
           <h2 class="text-accent opacity-50 font-26px">Cryptonite Links</h2>
           <ul class="text-white d-flex flex-column list-unstyled p-0">
@@ -125,7 +125,7 @@
           </ul>
         </div>
       </div>
-      <div class="col-12 col-sm-6 col-md-3">
+      <div class="col-6 col-md-3">
         <div class="d-flex flex-column align-items-start">
           <h2 class="text-accent opacity-50 font-26px">Contact Us</h2>
           <ul class="text-white d-flex flex-column list-unstyled p-0">
@@ -142,7 +142,7 @@
           </ul>
         </div>
       </div>
-      <div class="col-12 col-sm-6 col-md-3">
+      <div class="col-6 col-md-3">
         <div class="d-flex flex-column align-items-start">
           <h2 class="text-accent opacity-50 font-26px">Community</h2>
           <ul class="text-white d-flex flex-column list-unstyled p-0">
@@ -177,14 +177,14 @@
         </div>
       </div>
     </div>
-  </div>
-  <div class="row">
-    <div class="col-12">
-      <div class="d-flex justify-content-center">
-        <p class="text-white opacity-50">
-          &copy 2021 Cryptonite All Rights Reserved
-        </p>
+    <div class="row">
+      <div class="col-12">
+        <div class="d-flex justify-content-center">
+          <p class="text-white text-center opacity-50">
+            &copy 2021 Cryptonite All Rights Reserved
+          </p>
+        </div>
       </div>
     </div>
   </div>
-</div>
+</section>
