--- a/src/app/home/empower-section/empower-section.component.scss
+++ b/src/app/home/empower-section/empower-section.component.scss
@@ -8,9 +8,9 @@
 //         font-size: 90px ;
 //     }
 // }
-#button-anim {
-    background-color: $accentColor;
-    border-radius: 80px;
-    width: 270px;
-    height: 80px;
-}
+// #button-anim {
+//     background-color: $accentColor;
+//     border-radius: 80px;
+//     width: 270px;
+//     height: 80px;
+// }
