--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,25 +1,88 @@
 
 
 /* You can add global styles to this file, and also import other style files */
-@import "./theme/colors.scss";
-@import "~bootstrap/scss/functions";
-@import "~bootstrap/scss/variables";
-@import "~bootstrap/scss/mixins";
-@import "~swiper/swiper-bundle";
-// @import "~ngx-bootstrap/datepicker/bs-datepicker.css";
-@import "~ngx-toastr/toastr";
 
+@use 'sass:map';
+@use '@angular/material' as mat;
+@use '@angular/material/theming' as mat-theming;
+@import url('https://fonts.cdnfonts.com/css/avenir');
+@import "~bootstrap/scss/bootstrap";
+@import '../src/styles/colors.scss';
+@import '../src/styles/typography.scss';
 
-//Bootstrap override
+//Material
+@include mat.core();
+
+html,
 body { 
-  min-height: 100% !important; 
-  font-family: "Poppins", sans-serif;
+  overflow-x: hidden;
+  touch-action: pan-y manipulation;
 }
 
-.container { 
-    max-width: 1366px;
+.main-container { 
+    flex: 1 0 auto;
+    display: flex;
+    position: relative;
+    max-width: 100vw;
 }
 
+.main-content {
+  max-width: 100%;
+  flex-grow: 1;
+  display: flex;
+  flex-direction: column;
+  position: relative;
+}
+
+$mat-primary-color: (
+  500: #093536,
+  contrast: (),
+);
+
+$mat-accent-color: (
+  500: #7FF272, 
+  contrast: (),
+);
+
+$custom-primary: mat.define-palette($mat-primary-color, 500);
+$custom-accent: mat.define-palette($mat-accent-color, 500);
+$custom-warn: mat.define-palette(mat.$red-palette, 500);
+
+$custom-typography: mat.define-typography-config(
+  $font-family: 'Avenir',
+);
+
+$custom-theme: mat.define-light-theme(
+  (
+    color: (
+      primary: $custom-primary,
+      accent: $custom-accent,
+      warn: $custom-warn,
+    ),
+    typography: $custom-typography,
+  )
+);
+$custom-theme: mat.define-dark-theme(
+  (
+    color: (
+      primary: $custom-primary,
+      accent: $custom-accent,
+      warn: $custom-warn,
+    ),
+  )
+);
+@include mat.all-component-themes($custom-theme);
+$color-config: mat.get-color-config($custom-theme);
+$primary-palette: map.get($color-config, 'primary');
+$accent-palette: map.get($color-config, 'accent');
+$warn-palette: map.get($color-config, 'warn');
+
+body {
+  height: 100%;
+  margin: 0;
+  font-family: 'Avenir', 'Sans-serif';
+}
+//Bootstrap override
 .text-danger {
     color: $dangerColor !important;
 }
@@ -68,5 +131,3 @@ body {
 .font-13px {
   font-size: clamp(0.875rem, 2.05vw, 0.25rem);
 }
-html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
